Fix mobile specific spacing issues

--- a/asset/css/abrascet.css
+++ b/asset/css/abrascet.css
@@ -904,6 +904,12 @@ img {
   text-align: center;
 }
 
+@media (min-width: 47rem) {
+  .archive-list {
+    columns: 2;
+  }
+}
+
 @media (min-width: 40rem) {
   .navigation {
     height: 7rem;
